Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ stages:
           
           - task: PublishPipelineArtifact@1
             inputs:
-              targetPath: '$(System.DefaultWorkingDirectory)/kube-manifests/02-Java-Apps/'
+              targetPath: '$(System.DefaultWorkingDirectory)'
               artifact: 'manifests-02-Java-Apps'
               publishLocation: 'pipeline'
