--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,14 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-- name: Deploykubemanifests
+- name: Deploykubemanifestsjava
   value: kube  
 
 stages:
   - stage: Deploy
     displayName: Deploy stage
     jobs:
-      - job: Deploykubemanifests
+      - job: Deploykubemanifestsjava
         steps:
           
           - task: PublishPipelineArtifact@1
